# spank-rs

./: ACKs.md  Cargo.toml  Docs.md  Plan.md  Procesp.md  Tracks.md
crates/spank/: Cargo.toml
crates/spank-api/: Cargo.toml
crates/spank-api/src/: lib.rs  outcome.rs  router.rs  server.rs  state.rs
crates/spank-cfg/: Cargo.toml
crates/spank-cfg/src/: lib.rs
crates/spank-core/: Cargo.toml
crates/spank-core/src/: drain.rs  error.rs  lib.rs  lifecycle.rs  phase.rs  principal.rs  record.rs  sentinel.rs
crates/spank-files/: Cargo.toml
crates/spank-files/src/: lib.rs  monitor.rs  sequencer.rs
crates/spank-hec/: Cargo.toml
crates/spank-hec/src/: authenticator.rs  lib.rs  outcome.rs  processor.rs  receiver.rs  sender.rs  token_store.rs
crates/spank-obs/: Cargo.toml
crates/spank-obs/src/: lib.rs  metrics.rs  tracing_init.rs
crates/spank-shipper/: Cargo.toml
crates/spank-shipper/src/: lib.rs  tcp.rs
crates/spank-store/: Cargo.toml
crates/spank-store/src/: backend.rs  lib.rs  sqlite.rs  traits.rs
crates/spank-tcp/: Cargo.toml
crates/spank-tcp/src/: lib.rs  listener.rs  receiver.rs
crates/spank/src/: cli.rs  main.rs
docs/: Errors.md  ExpRust.md  HECst.md  Network.md  Observability.md  Sparst.md
research/: Indust.md  Infrust.md  Perf.md  Pyst.md  Stast.md
viz/: ingest_interpretation_pipeline.dot
viz/diagrams/: README.md  components.mmd  ingest-sequence.mmd  threads.mmd
viz/graphs/: entities.dot
viz/uml/: bucket-lifecycle.puml  hec-readiness.puml  search-job.puml
