[workspace]
resolver = "2"
members = [
    "crates/spank-core",
    "crates/spank-obs",
    "crates/spank-cfg",
    "crates/spank-api",
    "crates/spank-hec",
    "crates/spank-files",
    "crates/spank-shipper",
    "crates/spank-store",
    "crates/spank-tcp",
    "crates/spank",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Spank Project"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
futures = "0.3"

# HTTP / web
axum = { version = "0.7", features = ["macros"] }
axum-server = "0.7"
hyper = { version = "1.4", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Tracing / metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Config
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Utility
bytes = "1.7"
flate2 = "1.0"
once_cell = "1.20"
parking_lot = "0.12"
arc-swap = "1.7"
tokio-stream = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
