[package]
name = "spank-hec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
spank-core = { path = "../spank-core" }
spank-obs = { path = "../spank-obs" }
spank-cfg = { path = "../spank-cfg" }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
metrics = { workspace = true }
