[package]
name = "spank-obs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
spank-core = { path = "../spank-core" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
