[package]
name = "spank-shipper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
spank-core = { path = "../spank-core" }
spank-obs = { path = "../spank-obs" }
spank-cfg = { path = "../spank-cfg" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
