[package]
name = "spank-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
spank-core = { path = "../spank-core" }
spank-obs = { path = "../spank-obs" }
spank-cfg = { path = "../spank-cfg" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
